[package]
name = "rpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
cli-clipboard = "0.4.0"
ansi_term = "0.12"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10.1"
aes = "0.8.4"
